k8s/apps/headerz/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: headerz
  namespace: headerz
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: headerz
      app.kubernetes.io/part-of: headerz
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: headerz
        app.kubernetes.io/part-of: headerz
    spec:
      containers:
      - name: headerz
        image: jonpulsifer/headerz:latest
