k8s/apps/headerz/03-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: headerz
  namespace: headerz
  labels:
    app.kubernetes.io/name: headerz
    app.kubernetes.io/part-of: headerz
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    hajimari.io/enable: "true"
    hajimari.io/icon: mdi:access-point-check
spec:
  ingressClassName: nginx
  rules:
  - host: headerz.lolwtf.ca
    http:
      paths:
      - backend:
          service:
            name: headerz
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - headerz.lolwtf.ca
    secretName: headerz.lolwtf.ca
