k8s/apps/headerz/00-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: headerz
  labels:
    app.kubernetes.io/name: headerz
    app.kubernetes.io/part-of: headerz
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: latest
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: latest
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: headerz
  labels:
    app.kubernetes.io/name: headerz
    app.kubernetes.io/part-of: headerz
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
