k8s/apps/headerz/01-network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: headerz
  namespace: headerz
  labels:
    app.kubernetes.io/name: headerz
    app.kubernetes.io/part-of: headerz
spec:
  egress:
  - {}
  ingress:
  - ports:
    - port: 3000
      protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/name: headerz
      app.kubernetes.io/part-of: headerz
  policyTypes:
  - Ingress
  - Egress
